apps/blog/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  selector:
    matchLabels:
      app: blog
  replicas: 1
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: registry.gitlab.com/rootmout/blog:latest
        ports:
        - containerPort: 80
