apps/blog/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  labels:
    app: blog
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: blog
